2005-01-11  Stan Shebs  <shebs@apple.com>

	* config/rs6000/rs6000.c (machopic_output_stub): Issue
	ldu instead of lwzu if 64-bit -mdynamic-no-pic.

2005-01-06  Daniel Berlin <dberlin@dberlin.org> 

        Fix PR tree-optimization/18792
        * tree-data-ref.c (build_classic_dist_vector): Change first_loop
        to first_loop_depth, and use loop depth instead of loop number.
        (build_classic_dir_vector): Ditto.
        (compute_data_dependences_for_loop): Use depth, not loop number.
        * tree-loop-linear.c (try_interchange_loops): Use loop depth, not loop
        number. Pass in loops, instead of loop numbers.
        (gather_interchange_stats): Ditto.
        (linear_transform_loops): Ditto.

2005-01-05  Stan Shebs  <shebs@apple.com>

	* unwind-dw2-fde-darwin.c (examine_objects): Use 64-bit
	Mach-O getters if ppc64.
	* config/darwin.c (darwin_asm_output_dwarf_delta): Obey
	size argument.
	* config/darwin.h (ASM_PREFERRED_EH_DATA_FORMAT): Use
	signed four-byte field for global code case.

2005-01-03  Geoffrey Keating  <geoffk@apple.com>

	Radar 3933673
	* config/rs6000/darwin-fallback.c: Use 'ucontext_t' rather than
	'struct ucontext'.

2004-12-16  Geoffrey Keating  <geoffk@apple.com>

	* c-cppbuiltin.c (builtin_define_float_constants): Set __*_EPSILON__
	for IBM long double format correctly.

	* config/darwin.c (darwin_handle_weak_import_attribute): Permit
	VAR_DECLs to have weak_import attribute.

2004-12-09  Stan Shebs  <shebs@apple.com>

	* config/rs6000/darwin-asm.h: New file, 32/64-bit assembly macros
	formerly in darwin-tramp.asm.
	* config/rs6000/darwin-tramp.asm: Include darwin-asm.h.
	* config/rs6000/darwin-fpsave.asm: Use 32/64-bit macros.
	* config/rs6000/t-darwin: Add dependencies.

2004-12-09  Matt Rice  <ratmice@yahoo.com>

	PR preprocessor/18102
	* c-incpath.c (remove_duplicates): Check for construct
	equality.
	
2004-12-01  Stan Shebs  <shebs@apple.com>

	* config/rs6000/rs6000.c (rs6000_override_options): Make 64-bit